gtk/gtkoffscreenwindow.c
@@ -64,7 +64,8 @@ gtk_offscreen_window_size_request (GtkWidget *widget,
   requisition->height = border_width * 2;
 
   child = gtk_bin_get_child (bin);
-  if (gtk_widget_get_visible (child))
+
+  if (child != NULL && gtk_widget_get_visible (child))
     {
       GtkRequisition child_req;
 
@@ -103,7 +104,8 @@ gtk_offscreen_window_size_allocate (GtkWidget *widget,
                             allocation->height);
 
   child = gtk_bin_get_child (bin);
-  if (gtk_widget_get_visible (child))
+
+  if (child != NULL && gtk_widget_get_visible (child))
     {
       GtkAllocation  child_alloc;
 
